Fix one more wrong color

--- a/frontend/sass/laletterbuilder/styles.scss
+++ b/frontend/sass/laletterbuilder/styles.scss
@@ -56,7 +56,7 @@ $jf-navbar-height: 70px;
 
 // SITE-WIDE STYLE DEFAULTS
 .jf-site-laletterbuilder {
-  background-color: $secondary-accent;
+  background-color: $secondary;
   font-family: $jf-body-family;
   // DEFAULT BODY FONT SPECS:
   font-size: 1.2rem;
